<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/nmsllMeetingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/mdp_12"
        android:paddingBottom="@dimen/mdp_12"
        android:paddingLeft="@dimen/mdp_16"
        android:paddingRight="@dimen/mdp_16"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            style="@style/NMSNewMeetingLabelTextStyle"
            android:text="@string/meeting7_create_time"/>

        <RadioGroup
            android:id="@+id/nmsTimeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/nmsTimeTypeSameDay"
                style="@style/NMSNewMeetingTimeTypeStyle"
                android:layout_marginRight="@dimen/mdp_8"
                android:text="@string/meeting7_create_cur_date"/>

            <RadioButton
                android:id="@+id/nmsTimeTypeAcrossDay"
                style="@style/NMSNewMeetingTimeTypeStyle"
                android:text="@string/meeting7_create_left_date"/>
        </RadioGroup>

    </LinearLayout>

    <View style="@style/CoreSplitLine"/>

    <!-- 起止时间 -->
    <LinearLayout
        android:id="@+id/nmsLayoutStartEndTime"
        style="@style/NMSNewMeetingLayoutBaseStyle"
        android:orientation="horizontal">

        <TextView
            style="@style/NMSNewMeetingLabelTextStyle"
            android:text="@string/meeting7_create_start_end_date"/>

        <TextView
            android:id="@+id/nmsTvStartEndTime"
            style="@style/NMSNewMeetingSelectableTextStyle"
            android:text="@string/meeting7_create_selected_title"/>

    </LinearLayout>

    <!-- 开始时间 -->
    <LinearLayout
        android:id="@+id/nmsLayoutStartDate"
        style="@style/NMSNewMeetingLayoutBaseStyle"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/NMSNewMeetingLabelTextStyle"
            android:text="@string/meeting7_create_start_date"/>

        <TextView
            android:id="@+id/nmsTvStartDate"
            style="@style/NMSNewMeetingSelectableTextStyle"
            android:layout_marginRight="@dimen/mdp_12"
            android:text="@string/meeting7_create_selected_title"/>

        <TextView
            android:id="@+id/nmsTvStartTime"
            style="@style/NMSNewMeetingSelectableTextStyle"
            android:layout_width="@dimen/mdp_72"
            android:gravity="right"
            android:text="@string/meeting7_create_selected_title"/>

    </LinearLayout>

    <View style="@style/CoreSplitLine"/>

    <!-- 结束时间 -->
    <LinearLayout
        android:id="@+id/nmsLayoutEndDate"
        style="@style/NMSNewMeetingLayoutBaseStyle"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/NMSNewMeetingLabelTextStyle"
            android:text="@string/meeting7_create_end_date"/>

        <TextView
            android:id="@+id/nmsTvEndDate"
            style="@style/NMSNewMeetingSelectableTextStyle"
            android:layout_marginRight="@dimen/mdp_12"
            android:text="@string/meeting7_create_selected_title"/>

        <TextView
            android:id="@+id/nmsTvEndTime"
            style="@style/NMSNewMeetingSelectableTextStyle"
            android:layout_width="@dimen/mdp_72"
            android:gravity="right"
            android:text="@string/meeting7_create_selected_title"/>

    </LinearLayout>

    <TextView
        android:id="@+id/nmsTvDurationTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/mdp_5"
        android:paddingRight="@dimen/mdp_16"
        android:gravity="right"
        android:textColor="#9DA3A6"
        android:textSize="@dimen/msp_12"
        android:visibility="gone"/>

</LinearLayout>