<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:paddingTop="@dimen/status_bar_height"
        android:background="?attr/colorPrimary"
        android:minHeight="@dimen/action_bar_size">

        <ImageView
            android:id="@+id/nmsIvBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/mdp_12"
            android:paddingRight="@dimen/mdp_16"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"/>


        <TextView
            android:id="@+id/nmsTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mdp_64"
            android:layout_marginRight="@dimen/mdp_64"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/meeting7_main_manager_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/msp_18"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/mdp_8"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/nmsTvRightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/mdp_8"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/meeting7_detail_not_handled"
                android:textColor="#28B9FF"
                android:textSize="@dimen/msp_16"/>

            <cn.flyrise.feep.core.base.views.BadgeView
                android:id="@+id/nmsTvBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:visibility="gone"/>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/mdp_0_2"
            android:layout_alignParentBottom="true"
            android:background="#D4D4D4"/>
    </RelativeLayout>


    <FrameLayout
        android:id="@+id/layoutFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F5F6F6">
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/mdp_0_5"
        android:background="#E4E6E7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mdp_52"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/nmsMeetingMine"
            style="@style/NMSMeetingRadioStyle"
            android:checked="true"
            android:drawableTop="@drawable/nms_ic_meeting"
            android:text="@string/meeting7_main_my"/>

        <RadioButton
            android:id="@+id/nmsMeetingMineRoom"
            style="@style/NMSMeetingRadioStyle"
            android:checked="false"
            android:drawableTop="@drawable/nms_ic_meeting_room"
            android:text="@string/meeting7_main_room"/>
    </LinearLayout>

</LinearLayout>